--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,30 @@
+/* CSS VARIABLES */
+
+:root {
+  --primary-light-color: white;
+  --primary-dark-color: black;
+  --secondary-color: #B1AD9E; /* SAND */
+  --accent-color: #76802A; /* BRIGHT OLIVE */
+  --accent-dark-color: #4d522a; /* DARK OLIVE */
+  --box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.3);
+}
 
 /* BASE */
+
 html, body, .container {
-  background: #788785;
+  background: var(--secondary-color);
+  font-family:'Montserrat', sans-serif;
   height: 100vh;
   width: 100vw;
   margin: 0;
   padding: 0;
 }
 
-/* MAIN */
+/* MAIN - COVER PAGE */
 /* Inspired by Duddley Storey Codepen - https://codepen.io/dudleystorey/pen/aONdzJ */
 
 .main {
   text-align: center;
-  font-family:'Montserrat', sans-serif;
 }
 .half-dark, .half-light {
   height: 50%;
@@ -21,16 +32,15 @@ html, body, .container {
   overflow: hidden;
 }
 .half-dark {
-  background: black;
+  background: var(--primary-dark-color);
 }
 .half-light {
-  background: white;
+  background: var(--primary-light-color);
 }
 .heading-dark, .heading-light {
   color: transparent;
   margin: 0;
   padding: 0;
-  font-family:'Montserrat', sans-serif;
   font-size: 200px;
   font-weight: 700;
   align-self: center;
@@ -55,10 +65,9 @@ html, body, .container {
 }
 .enter a {
   background: rgba(255, 255, 255, 0.7);
-  border: 2px solid #76802A;
+  border: 2px solid var(--accent-color);
   border-radius: 5px;
-  color: #76802A;
-  font-family:'Montserrat', sans-serif;
+  color: var(--accent-color);
   font-weight: 600;
   font-size: 16px;
   padding: 15px 50px;
@@ -66,38 +75,38 @@ html, body, .container {
   transition: all 200ms ease-in-out;
 }
 .enter a:hover {
-  color: white;
-  background:#76802A;
-  box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.5);
+  color: var(--primary-light-color);
+  background: var(--accent-color);
+  box-shadow: var(--box-shadow);
 }
 .main-footer{
-color:#76802A;
+color: var(--accent-color);
 justify-content: center;
 align-items: center;
+font-size: 14px;
 }
 .main-footer a {
   text-decoration: none;
-  color:#76802A;
-  font-weight: 500;
-  font-size: 16px;
+  color: var(--accent-color);
+  font-weight: 600;
+  font-size: 14px;
 }
 .main-footer a:hover {
-  color: #5D7FC3;
+  color: var(--accent-dark-color);
 }
 
-/* HOMEPAGE */
+/* HOMEPAGE - LIGHT THEME */
 
 .homepage {
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-family:'Montserrat', sans-serif;
   width: 100vw;
 }
 .hero {
   width: 100%;
-  height: 800px;
-  background:white;
+  height: 900px;
+  background:var(--primary-light-color);
   padding-top: 150px;
 }
 .hero h1 {
@@ -105,7 +114,6 @@ align-items: center;
   background-size: 610px;
   background-clip: text;
   color: transparent;
-  font-family:'Montserrat', sans-serif;
   font-size: 200px;
   font-weight: 700;
   margin-bottom: 12px;
@@ -114,18 +122,17 @@ align-items: center;
 .hero p { /* hint: Hi, I am */
   font-size: 48px;
   font-weight: 700;
-   margin: 0;
+  margin: 0;
 }
 .hero h2 { /* hint: Front end dev... */
   font-size: 36px;
   font-weight: 600;
-   margin-bottom: 80px;
+  margin-bottom: 80px;
 }
 .primary-link, 
 .secondary-link {
-  border: 2px solid #76802A;
+  border: 2px solid var(--accent-color);
   border-radius: 5px;
-  font-family:'Montserrat', sans-serif;
   font-size: 16px;
   font-weight: 600;
   margin: 0 20px;
@@ -134,20 +141,64 @@ align-items: center;
   transition: all 200ms ease-in-out;
 }
 .primary-link {
-  background: #76802A;
-  box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.3);
-  color:white; 
+  background: var(--accent-color);
+  color: var(--primary-light-color); 
 }
 .primary-link:hover {
-  color:white;
-  background: #4d522a;
-  border: 2px solid #4d522a;
+  background: var(--accent-dark-color);
+  border: 2px solid var(--accent-dark-color);
+  box-shadow: var(--box-shadow);
+  color: var(--primary-light-color);
 }
 .secondary-link {
-  background: white; 
-  color:#76802A;  
+  background: var(--primary-light-color);
+  color: var(--accent-color);  
 }
 .secondary-link:hover {
-  color:#242422;  
-  border: 2px solid #242422; 
+  color: var(--primary-dark-color);  
+  border: 2px solid var(--primary-dark-color); 
+}
+
+/* CONTACT FOOTER - LIGHT THEME */
+
+.contact {
+  margin: 30px auto;
+}
+.contact, .footer {
+  color: var(--primary-light-color);
+}
+.contact h3 {
+  font-weight: 600;
+  margin-top: 40px;
+}
+.contact .social-media-links {
+  list-style-type: none;
+  padding: 0;
+}
+.social-media-links li {
+  display: inline-block;
+  font-size: 42px;
+  margin: 20px 30px;
+}
+.social-media-links li a {
+  color: var(--primary-light-color);
+  transition: all 200ms ease-in-out;
+}
+.social-media-links li a:hover {
+  color: var(--accent-color);
+}
+.footer {
+  font-size: 14px;
+}
+.footer a, 
+.contact a {
+  color: var(--primary-light-color);
+  font-weight: 600;
+  transition: all 200ms ease-in-out;
+  text-decoration: none;
+}
+.footer a:hover,
+.contact a:hover {
+  color: var(--accent-color);
+  text-decoration: none;
 }
