--- a/src/styles.css
+++ b/src/styles.css
@@ -202,3 +202,16 @@ font-size: 14px;
   color: var(--accent-color);
   text-decoration: none;
 }
+
+/* ABOUT */
+
+.about-wrapper {
+
+  background:var(--primary-light-color);
+  margin: 0;
+  padding-top: 150px;
+}
+.about {
+  height: 800px;
+  
+}
