--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@
 
 /* BASE */
 
-html, body, .container {
+html, body, .main {
   background: var(--secondary-color);
   font-family:'Montserrat', sans-serif;
   height: 100vh;
@@ -166,6 +166,7 @@ font-size: 14px;
 }
 .contact, .footer {
   color: var(--primary-light-color);
+  text-align: center;
 }
 .contact h3 {
   font-weight: 600;
@@ -205,13 +206,80 @@ font-size: 14px;
 
 /* ABOUT */
 
-.about-wrapper {
-
-  background:var(--primary-light-color);
-  margin: 0;
-  padding-top: 150px;
-}
 .about {
-  height: 800px;
-  
+  background:var(--primary-light-color);
+  width: 100vw;
+  margin: 0;
+  padding: 0 30px;
+}
+.about-hero {
+  padding-top: 150px;
+  margin-bottom: 75px;
+}
+.about-hero .my-photo {
+  background-image: url('../images/aileenchany_bw.png');
+  background-size: cover;
+  width: 290px;
+  height: 400px;
+  border-radius: 50%;
+}
+.about-hero .contact-me {
+  color: var(--accent-color);
+  text-decoration: none;
+  font-weight: 600;
+}
+.about .col-3 {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.about-hero h1 {
+  font-size: 50px;
+  font-weight: 600px;
+  margin-bottom: 30px;
+}
+.about h3 {
+  font-size: 32px;
+  font-weight: 600px;
+  margin-bottom: 30px;
+}
+.about-hero p {
+  font-size: 20px;
+  line-height: 2em;
+  margin-bottom: 30px;
+  padding-right: 40px;
+  text-align: justify;
+}
+.links {
+  margin-top: 60px;
+  margin-left: 0;
+}
+.about ul {
+  padding: 0;
+}
+.about ul li {
+  display: inline-block;
+  font-size: 16px;
+  list-style-type: none;
+  padding: 0 15px;
+  border-right: 2px solid var(--primary-dark-color);
+  text-align: center;
+}
+.tech-stack, .design-skills, .certifications {
+  margin: 75px 0;
+}
+.certificate img {
+  width: 330px;
+  box-shadow: var(--box-shadow);
+  margin-bottom: 100px;
+}
+.coming-soon img { /* REMOVE THIS CONTENT ONCE I GET CERTIFIFCATE :-) */
+  border: 12px solid var(--primary-light-color);
+  width: 330px;
+  height: 238px;
+}
+.about hr {
+  border: 1px solid var(--primary-dark-color);
+  border-radius: 25%;
+  padding: 0 20px;
 }
