--- a/src/styles.css
+++ b/src/styles.css
@@ -19,15 +19,6 @@ body {
   padding: 0;
 }
 
-h1, h2, h3, h4, p {
-  padding: 0;
-  margin: 0;
-}
-
-.footer {
-  background: var(--secondary-color);
-}
-
 /* MAIN - COVER PAGE */
 /* Inspired by Duddley Storey Codepen - https://codepen.io/dudleystorey/pen/aONdzJ */
 
@@ -91,32 +82,10 @@ h1, h2, h3, h4, p {
   background: var(--accent-color);
   box-shadow: var(--box-shadow);
 }
-.main-foot-note{
-color: var(--accent-color);
-justify-content: center;
-align-items: center;
-font-size: 14px;
-}
-.main-foot-note a {
-  text-decoration: none;
-  color: var(--accent-color);
-  font-weight: 600;
-  font-size: 14px;
-}
-.main-foot-note a:hover {
-  color: var(--accent-dark-color);
-}
 
 /* HOMEPAGE - LIGHT THEME */
 
-.homepage {
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  width: 100vw;
-}
 .hero {
-  width: 100%;
   height: 900px;
   background:var(--primary-light-color);
   padding: 150px 0 0 0;
@@ -173,26 +142,15 @@ font-size: 14px;
 
 /* CONTACT FOOTER - LIGHT THEME */
 
-.contact {
-  margin: 30px auto;
-}
-.contact, .foot-note {
+.footer {
+  background: var(--secondary-color);
   color: var(--primary-light-color);
-  text-align: center;
-  padding: 0;
 }
 .contact h3 {
   font-weight: 600;
-  margin-top: 40px;
-}
-.contact .social-media-links {
-  list-style-type: none;
-  padding: 0;
 }
 .social-media-links li {
-  display: inline-block;
   font-size: 42px;
-  margin: 20px 30px;
 }
 .social-media-links li a {
   color: var(--primary-light-color);
@@ -204,10 +162,9 @@ font-size: 14px;
 .foot-note {
   font-size: 14px;
 }
-.foot-note a, 
+.foot-note a,
 .contact a {
   color: var(--primary-light-color);
-  font-weight: 600;
   transition: all 200ms ease-in-out;
   text-decoration: none;
 }
@@ -217,74 +174,46 @@ font-size: 14px;
   text-decoration: none;
 }
 
-/* ABOUT */
-
-.about {
-  background:var(--primary-light-color);
-  width: 100vw;
-  margin: 0;
-  padding: 0 30px;
-}
+/* ABOUT ME */
+/* HERO SECTION */
 .about-hero {
-  padding-top: 150px;
-  margin-bottom: 75px;
+  background:var(--primary-light-color);
+  margin-bottom: 100px;
+  padding-top: 100px;
 }
 .about-hero .my-photo {
   background-image: url('../images/aileenchany_bw.png');
   background-size: cover;
-  width: 290px;
-  height: 400px;
-  border-radius: 50%;
+  width: 250px;
+  height: 350px;
 }
-.about-hero .contact-me {
+.about-hero .contact-link {
   color: var(--accent-color);
   text-decoration: none;
   font-weight: 600;
 }
-.about .col-3 {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-}
-.about-hero h1 {
+.about-hero h1, 
+.about-hero h2 {
   font-size: 50px;
   font-weight: 600;
-  margin-bottom: 30px;
-}
-.about h3 {
-  font-size: 32px;
-  font-weight: 600;
-  margin-bottom: 30px;
 }
 .about-hero p {
   font-size: 20px;
   line-height: 2em;
-  margin-bottom: 30px;
-  padding-right: 40px;
-  text-align: justify;
 }
-.links {
-  margin-top: 60px;
-  margin-left: 0;
+/* SKILLS SECTION */
+/* *** STACK *** DESIGN *** CERTIFICATIONS *** */
+.skills h3 {
+  font-size: 32px;
+  font-weight: 600;
 }
-.about ul {
-  padding: 0;
-}
-.about ul li {
-  display: inline-block;
+.skills ul li {
   font-size: 16px;
   font-weight: 600;
-  list-style-type: none;
-  padding: 0 15px;
-  border-right: 2px solid var(--primary-dark-color);
-  text-align: center;
   transition: all 200ms ease-in;
 }
-.about ul li:hover {
+.skills ul li:hover {
   color: var(--accent-color);
-}
-.tech-stack, .design-skills, .certifications {
-  margin: 75px 0;
 }
 .certificate img {
   width: 330px;
@@ -295,11 +224,6 @@ font-size: 14px;
   border: 12px solid var(--primary-light-color);
   width: 330px;
   height: 238px;
-}
-.about hr {
-  border: 1px solid var(--primary-dark-color);
-  border-radius: 25%;
-  padding: 0 20px;
 }
 
 /* WORK */
