--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,10 @@
 /* CSS VARIABLES */
 
 :root {
-  --primary-light-color: white;
-  --primary-dark-color: black;
+  --primary-light-color: #fff;
+  --primary-dark-color: #000;
   --secondary-color: #B1AD9E; /* SAND */
+  --secondary-dark-color: #202020;
   --accent-color: #76802A; /* BRIGHT OLIVE */
   --accent-dark-color: #4d522a; /* DARK OLIVE */
   --box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.3);
@@ -12,6 +13,7 @@
 /* BASE */
 
 body {
+  background: var(--secondary-dark-color);
   font-family:'Montserrat', sans-serif;
   max-height: auto;
   max-width: 100%;
@@ -19,9 +21,9 @@ body {
   padding: 0;
 }
 
-/* MAIN - COVER PAGE */
+/* OLD MAIN - COVER PAGE */
 /* Inspired by Duddley Storey Codepen - https://codepen.io/dudleystorey/pen/aONdzJ */
-
+/*
 .main {
   text-align: center;
   height: 100vh;
@@ -82,13 +84,55 @@ body {
   background: var(--accent-color);
   box-shadow: var(--box-shadow);
 }
+*/
 
-/* HOMEPAGE - LIGHT THEME */
-
+/* HOMEPAGE */
+/* NAV BAR */
+nav {
+  padding-top: 10px;
+  height: 60px;
+  position: sticky;
+}
+nav a {
+  color: var(--primary-light-color);
+  font-weight: 500;
+  text-decoration: none;
+  transition: all 300ms ease-in-out;
+}
+nav a:hover, 
+nav li.active a {
+ color: var(--accent-color);
+ font-weight: 600;
+}
+nav p {
+  padding: 0;
+  margin:0;
+}
+nav li {
+  display: inline;
+  font-size: 16px;
+  list-style-type: none;
+  line-height: 42px;
+  margin-left: 40px;
+}
+nav ul {
+  padding: 0;
+  
+}
+nav .logo {
+  color: var(--primary-light-color);
+  font-size: 28px;
+  font-weight: 700;
+  letter-spacing: 0.25em;
+}
+/* HERO */
 .hero {
-  height: 900px;
-  background:var(--primary-light-color);
-  padding: 150px 0 0 0;
+  color: var(--primary-light-color);
+  height: 850px;
+  background:var(--secondary-dark-color);
+  padding: 100px 0 0 0;
+  position: relative;
+  text-align: center;
 }
 .hero h1 {
   background-image: url('https://mapio.net/images-p/105618165.jpg');
@@ -102,58 +146,93 @@ body {
 }
 .hero p { /* hint: Hi, I am */
   font-size: 48px;
-  font-weight: 700;
-  margin: 0;
+  font-weight: 500;
+  opacity: 0.8;
 }
 .hero h2 { /* hint: Front end dev... */
-  font-size: 36px;
-  font-weight: 600;
+  font-size: 40px;
+  font-weight: 500;
   margin-bottom: 80px;
+  opacity: 0.8;
 }
 .primary-link, 
 .secondary-link {
-  border: 2px solid var(--accent-color);
   border-radius: 5px;
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 500;
   margin: 0 20px;
   padding: 15px 40px;
   text-decoration: none;
-  transition: all 200ms ease-in-out;
+  transition: all 250ms ease-in-out;
 }
 .primary-link {
+  border: 2px solid var(--accent-color);
   background: var(--accent-color);
   color: var(--primary-light-color); 
 }
 .primary-link:hover {
   background: var(--accent-dark-color);
   border: 2px solid var(--accent-dark-color);
-  box-shadow: var(--box-shadow);
-  color: var(--primary-light-color);
+  color: var(--primary-light-color); 
 }
 .secondary-link {
+  border: 2px solid var(--primary-light-color);
   background: var(--primary-light-color);
-  color: var(--accent-color);  
+  color: var(--accent-dark-color);  
 }
 .secondary-link:hover {
-  color: var(--primary-dark-color);  
-  border: 2px solid var(--primary-dark-color); 
+  color: var(--accent-color);
+  background: transparent;  
+  border: 2px solid var(--accent-color); 
 }
 
-/* CONTACT FOOTER - LIGHT THEME */
+/* CHARCOAL WAVES - SHAPE DIVIDER - HOME PAGE - https://www.shapedivider.app/ */
+.shape-divider {
+  position: relative;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+.custom-shape-divider-top-1628184011 {
+  position: absolute;
+  top: 0;
+  left: -15px;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+.custom-shape-divider-top-1628184011 svg {
+  position: relative;
+  display: block;
+  width: calc(140% + 1.3px);
+  height: 95px;
+  transform: rotateY(180deg);
+}
+.custom-shape-divider-top-1628184011 .shape-fill {
+  fill: #202020;
+}
+
+/* CONTACT FOOTER */
 
 .footer {
-  background: var(--secondary-color);
-  color: var(--primary-light-color);
+  background-image: url('/images/sand.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 50px;
 }
 .contact h3 {
+  color: var(--primary-dark-color);
   font-weight: 600;
+}
+.contact p,
+.foot-note {
+  color: var(--primary-dark-color);
 }
 .social-media-links li {
   font-size: 42px;
 }
 .social-media-links li a {
-  color: var(--primary-light-color);
+  color: var(--primary-dark-color);
   transition: all 200ms ease-in-out;
 }
 .social-media-links li a:hover {
@@ -164,7 +243,7 @@ body {
 }
 .foot-note a,
 .contact a {
-  color: var(--primary-light-color);
+  color: var(--primary-dark-color);
   transition: all 200ms ease-in-out;
   text-decoration: none;
 }
@@ -173,13 +252,19 @@ body {
   color: var(--accent-color);
   text-decoration: none;
 }
+a.top {
+  color: var(--primary-dark-color);
+}
+a.top:hover {
+  color: var(--accent-color);
+}
 
 /* ABOUT ME */
 /* HERO SECTION */
 .about-hero {
-  background:var(--primary-light-color);
-  margin-bottom: 100px;
-  padding-top: 100px;
+  background:var(--secondary-dark-color);
+  color: var(--primary-light-color);
+  height: 850px;
 }
 .about-hero .my-photo {
   background-image: url('../images/aileenchany_bw.png');
@@ -192,18 +277,29 @@ body {
   text-decoration: none;
   font-weight: 600;
 }
-.about-hero h1, 
-.about-hero h2 {
-  font-size: 50px;
+.about-hero h1 {
+  font-size: 40px;
   font-weight: 600;
+  color: var(--accent-color);
+}
+.about-hero h2 {
+  font-size: 30px;
+  font-weight: 400;
+  opacity: 0.8;
 }
 .about-hero p {
   font-size: 20px;
   line-height: 2em;
+  opacity: 0.8;
 }
+
 /* SKILLS SECTION */
 /* *** STACK *** DESIGN *** CERTIFICATIONS *** */
+.skills {
+  color: var(--primary-light-color);
+}
 .skills h3 {
+  color: var(--accent-color);
   font-size: 32px;
   font-weight: 600;
 }
@@ -211,9 +307,11 @@ body {
   font-size: 16px;
   font-weight: 600;
   transition: all 200ms ease-in;
+  opacity: 0.8;
 }
 .skills ul li:hover {
   color: var(--accent-color);
+  opacity: 1;
 }
 .certificate img {
   width: 330px;
@@ -229,16 +327,27 @@ body {
 /* WORK */
 
 .work {
+  background: var(--secondary-dark-color);
   padding-top: 100px;
   margin-bottom: 100px;
+}
+.work h1 {
+  color: var(--primary-light-color);
+  font-size: 30px;
+  font-weight: 400;
+  opacity: 0.8;
+}
+.work h3, .work h4, .work p {
+  color: var(--primary-light-color);
+  opacity: 0.8;
 }
 .work h3,
 .work h4 {
   font-weight: 600;
 }
 .work .bg-color {
-  background: var(--primary-light-color);
-  border: 12px solid var(--primary-light-color);
+  background: var(--primary-dark-color);
+  border: 12px solid var(--primary-dark-color);
   box-shadow: var(--box-shadow);
   color: var(--primary-dark-color);
 }
@@ -249,7 +358,7 @@ body {
   background-position-y: 50%;
   width: 450px;
   height: 350px;
-  border: 12px solid var(--primary-light-color);
+  border: 12px solid var(--primary-dark-color);
   box-shadow: var(--box-shadow);
 }
 .work .project-1 {
