--- a/src/styles.css
+++ b/src/styles.css
@@ -49,13 +49,17 @@ nav li {
 nav ul {
   padding: 0;
 }
-nav .logo {
+nav .logo a {
   color: var(--primary-light-color);
   font-size: 28px;
   font-weight: 700;
   letter-spacing: 0.15em;
   padding: 0;
   margin:0;
+  transition: all 250ms ease-in-out;
+}
+nav .logo a:hover {
+  color: var(--accent-color);
 }
 
 /* HERO */
