--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
   --primary-light-color: #fff;
   --primary-dark-color: #000;
   --secondary-dark-color: #202020;
-  --accent-color: #76802A; /* BRIGHT OLIVE */
+  --accent-color: #76802a; /* BRIGHT OLIVE */
   --accent-dark-color: #4d522a; /* DARK OLIVE */
   --box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.3);
 }
@@ -14,7 +14,7 @@
 
 body {
   background: var(--secondary-dark-color);
-  font-family:'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 
   margin: 0;
   padding: 0;
@@ -34,10 +34,10 @@ nav a {
   text-decoration: none;
   transition: all 300ms ease-in-out;
 }
-nav a:hover, 
+nav a:hover,
 nav li.active a {
- color: var(--accent-color);
- font-weight: 600;
+  color: var(--accent-color);
+  font-weight: 600;
 }
 nav li {
   display: inline;
@@ -55,7 +55,7 @@ nav .logo a {
   font-weight: 700;
   letter-spacing: 0.15em;
   padding: 0;
-  margin:0;
+  margin: 0;
   transition: all 250ms ease-in-out;
 }
 nav .logo a:hover {
@@ -71,35 +71,38 @@ nav .logo a:hover {
 .hero {
   color: var(--primary-light-color);
   height: 850px;
-  background:var(--secondary-dark-color);
+  background: var(--secondary-dark-color);
   padding: 100px 0 0 0;
   position: relative;
   text-align: center;
 }
 .hero h1 {
-  background-image: url('https://mapio.net/images-p/105618165.jpg');
+  /* background-image: url('https://mapio.net/images-p/105618165.jpg'); */
+  background-image: url('../images/beach-2.png');
   background-size: 610px;
+  background-repeat: repeat;
   background-clip: text;
   color: transparent;
- 
   font-size: 200px;
   font-weight: 700;
   margin-bottom: 12px;
-  -webkit-background-clip:text;
+  -webkit-background-clip: text;
 }
-.hero p { /* hint: Hi, I am */
+.hero p {
+  /* hint: Hi, I am */
   font-family: 'Tourney', cursive;
   font-size: 36px;
   font-weight: 500;
   opacity: 0.8;
 }
-.hero h2 { /* hint: Front end dev... */
+.hero h2 {
+  /* hint: Front end dev... */
   font-size: 40px;
   font-weight: 500;
   margin-bottom: 80px;
   opacity: 0.8;
 }
-.primary-link, 
+.primary-link,
 .secondary-link {
   border-radius: 5px;
   font-size: 16px;
@@ -112,21 +115,21 @@ nav .logo a:hover {
 .primary-link {
   border: 2px solid var(--accent-color);
   background: var(--accent-color);
-  color: var(--primary-light-color); 
+  color: var(--primary-light-color);
 }
 .primary-link:hover {
   background: var(--accent-dark-color);
   border: 2px solid var(--accent-dark-color);
-  color: var(--primary-light-color); 
+  color: var(--primary-light-color);
 }
 .secondary-link {
   border: 2px solid var(--accent-color);
-  background: transparent; 
-  color: var(--accent-color);  
+  background: transparent;
+  color: var(--accent-color);
 }
 .secondary-link:hover {
-  color: var(--primary-light-color); 
-  border: 2px solid var(--primary-light-color); 
+  color: var(--primary-light-color);
+  border: 2px solid var(--primary-light-color);
 }
 
 /* CHARCOAL WAVES - SHAPE DIVIDER - HOME PAGE - https://www.shapedivider.app/ */
@@ -206,7 +209,7 @@ a.top:hover {
 /* ABOUT ME */
 /* HERO SECTION */
 .about-hero {
-  background:var(--secondary-dark-color);
+  background: var(--secondary-dark-color);
   color: var(--primary-light-color);
   height: 850px;
 }
@@ -249,7 +252,7 @@ a.top:hover {
   color: var(--primary-light-color);
   font-size: 32px;
   font-weight: 600;
-  letter-spacing: 0.10em;
+  letter-spacing: 0.1em;
   opacity: 0.8;
 }
 .skills ul li {
@@ -288,7 +291,8 @@ a.top:hover {
   font-weight: 600;
   font-family: 'Tourney', cursive;
 }
-.work h3, .work p {
+.work h3,
+.work p {
   color: var(--primary-light-color);
   opacity: 0.8;
 }
@@ -306,21 +310,32 @@ a.top:hover {
   background-size: cover;
   background-repeat: no-repeat;
   box-shadow: var(--box-shadow);
-  background-position:center;
+  background-position: center;
   background-size: 100%;
 }
 .work .project-1 {
-  background-image: url('../images/react-weather-app-img.png'); 
+  background-image: url('../images/react-weather-app-img.png');
 }
 .work .project-2 {
-  background-image: url('../images/react-dictionary-puppy-img.png');  
+  background-image: url('../images/react-dictionary-puppy-img.png');
 }
 .work .project-3 {
-  background-image: url('../images/porto-caribe-img.png'); 
+  background-image: url('../images/porto-caribe-img.png');
+}
+.work .project-4 {
+  background-image: url('../images/miyaki-480px.gif');
+  background-size: contain;
+}
+.work .project-5 {
+  background-image: url('../images/wunder-dashboard.png');
+  background-size: contain;
+}
+.work .project-6 {
+  background-image: url('../images/structure.gif');
 }
 
 /* CONTACT */
-.contact-container .footer{
+.contact-container .footer {
   height: 100vh;
 }
 .contact-container .footer h1 {
@@ -348,7 +363,7 @@ a.top:hover {
 /* MOBILE - MEDIA QUERIES */
 @media only screen and (max-width: 768px) {
   /* MOBILE - HOMEPAGE */
-  nav p.logo  {
+  nav p.logo {
     display: none;
   }
   nav ul {
@@ -378,7 +393,7 @@ a.top:hover {
   }
   .links a {
     margin: 0 10px;
-    padding: 10px 20px; 
+    padding: 10px 20px;
   }
   .shape-divider {
     display: none;
@@ -391,7 +406,7 @@ a.top:hover {
     font-size: 11px;
   }
   /* MOBILE - ABOUT PAGE */
-  
+
   .about-hero h1,
   .about-hero h2,
   .about-hero p {
@@ -416,12 +431,12 @@ a.top:hover {
   .about-hero .links .primary-link,
   .about-hero .links .secondary-link {
     margin: 0 10px 25px 10px;
-    padding: 10px 20px; 
+    padding: 10px 20px;
   }
   .skills ul {
     list-style-type: none;
   }
-  .skills ul li{
+  .skills ul li {
     display: block !important;
     border: none !important;
     padding-left: 0 !important;
